--- a/modern/src/resources/l10n/am.json
+++ b/modern/src/resources/l10n/am.json
@@ -488,7 +488,7 @@
     "notificatorMail": "ሜይል",
     "notificatorSms": "ኤስኤምኤስ",
     "notificatorFirebase": "Firebase",
-    "notificatorTracar": "Traccar",
+    "notificatorTracar": "Eyeta",
     "notificatorTelegram": "ቴሌግራም",
     "notificatorPushover": "ፑሾቨር",
     "reportReplay": "እንደገና አጫውት",
