--- a/modern/src/resources/l10n/da.json
+++ b/modern/src/resources/l10n/da.json
@@ -485,7 +485,7 @@
     "notificatorMail": "Mail",
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
-    "notificatorTraccar": "Traccar",
+    "notificatorTraccar": "Eyeta",
     "notificatorTelegram": "Telegram",
     "notificatorPushover": "Pushover",
     "reportReplay": "Genafspil",
