--- a/modern/src/resources/l10n/or.json
+++ b/modern/src/resources/l10n/or.json
@@ -488,7 +488,7 @@
     "notificatorMail": "Ergaa",
     "notificatorSms": "Ergaa ergaa",
     "notificatorFirebase": "Bu'uura Ibiddaa",
-    "notificatorTraccar": "Traccar",
+    "notificatorTraccar": "Eyeta",
     "notificatorTelegram": "Telegiraamii",
     "notificatorPushover": "Dhiibbaa",
     "reportReplay": "Irra deebi'ee taphachuu",
