--- a/modern/src/resources/l10n/tg.json
+++ b/modern/src/resources/l10n/tg.json
@@ -484,7 +484,7 @@
     "notificatorMail": "ፖስታ",
     "notificatorSms": "ኤስኤምኤስ",
     "notificatorFirebase": "ፋየርቤዝ",
-    "notificatorTraccar": "ትራካር",
+    "notificatorTraccar": "እይታ",
     "notificatorቴሌግራም": "ቴሌግራም",
     "notificatorPushover": "ምድፋእ",
     "reportReplay": "ዳግመ ምጽዋት",
