--- a/modern/src/resources/l10n/zh.json
+++ b/modern/src/resources/l10n/zh.json
@@ -485,7 +485,7 @@
     "notificatorMail": "邮件",
     "notificatorSms": "短信",
     "notificatorFirebase": "Firebase",
-    "notificatorTraccar": "Traccar",
+    "notificatorTraccar": "Eyeta",
     "notificatorTelegram": "Telegram账号",
     "notificatorPushover": "Pushover",
     "reportReplay": "轨迹回放",
