--- a/modern/src/resources/l10n/fi.json
+++ b/modern/src/resources/l10n/fi.json
@@ -485,7 +485,7 @@
     "notificatorMail": "Sähköposti",
     "notificatorSms": "Tekstiviesti",
     "notificatorFirebase": "Firebase",
-    "notificatorTraccar": "Traccar",
+    "notificatorTraccar": "Eyeta",
     "notificatorTelegram": "Telegram",
     "notificatorPushover": "Pushover",
     "reportReplay": "Toista",
